# EXE101_Knowledge_Base

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
database/migration/: foreign_key_indexes.down.sql  foreign_key_indexes.up.sql  init_schema.down.sql  init_schema.up.sql
src/backend/: go.mod  go.sum  main.go
src/backend/config/: config.go  config.py
src/backend/handler/: chat_handler.go
src/backend/model/: chat.go
src/backend/repository/: postgres_repository.go  redis_repository.go
src/backend/service/chat/: chat_service.go
src/backend/service/llm/: pipeline.py  server.py
src/frontend/: .gitignore  env.d.ts  package-lock.json  package.json
src/frontend/src/: App.vue
src/frontend/src/assets/: main.css
src/frontend/src/stores/: ui.ts
src/parser/: main.py  parser.py
src/pipeline/: embedding.py  ingest.py  main.py
