[project]
name = "exe101-knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "OiHuecuata",email = "04122005truongtuan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langgraph (>=1.2.0,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "unstructured[all-docs] (>=0.22.28,<0.23.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)"
]
