[project]
name = "exe101-knowledge-base"
version = "0.1.0"
description = ""
authors = [
    {name = "OiHuecuata",email = "04122005truongtuan@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "langchain-openai (>=1.2.1,<2.0.0)",
    "langgraph (>=1.2.0,<2.0.0)",
    "python-pptx (>=1.0.2,<2.0.0)",
    "python-docx (>=1.2.0,<2.0.0)",
    "unstructured[all-docs] (>=0.22.28,<0.23.0)",
    "sentence-transformers (>=5.5.0,<6.0.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "pgvector (>=0.4.2,<0.5.0)",
    "sqlalchemy (>=2.0.49,<3.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "huggingface-hub (>=1.15.0,<2.0.0)",
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.47.0,<0.48.0)",
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.12,<0.16.0)",
    "black (>=26.3.1,<27.0.0)"
]
